--- a/src/index.css
+++ b/src/index.css
@@ -236,6 +236,22 @@ button:hover {
     margin: 100px 150px;
   }
 
+  /* Apply animation to all cards */
+  .card-link {
+    text-decoration: none;
+  }
+
+  .card-link .card {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .card-link:hover .card {
+    transform: scale(1.05); /* Slightly enlarges the card */
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2); /* Adds a soft shadow */
+  }
+
+
+
   @media (max-width: 820px) {
     .header-title {
         font-size: 40px;
